--- a/Tweet_analysis_gpt.ipynb
+++ b/Tweet_analysis_gpt.ipynb
@@ -7,7 +7,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import torch\n",
     "import numpy as np\n",
     "import os\n",
     "import openai\n",
@@ -15,7 +14,7 @@
     "from tqdm import tqdm\n",
     "from collections import defaultdict\n",
     "import time\n",
-    "from data.load import load_data\n",
+    "from data.load import load,load_for_correction\n",
     "\n",
     "\n",
     "%load_ext autoreload\n",
@@ -31,11 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "first_data = load_data(50)"
+    "DATA_PATH_1= \"data/files/processed_0_999.csv\"\n",
+    "DATA_PATH_2=\"data/files/processed_1000_1999.csv\"\n",
+    "\n",
+    "dataset = load(DATA_PATH_1,DATA_PATH_2,start=0,end = 2)\n"
    ]
   },
   {
@@ -47,51 +49,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from ChatGPT.model import OpenAI_Tweet_Analyzer,predict_dataset\n",
     "\n",
-    "model = OpenAI_Tweet_Analyzer(model_name=\"gpt-3.5-turbo-1106\",max_tokens = 100,temperature=0.7,prompt_technique=\"in_context\")"
+    "model = OpenAI_Tweet_Analyzer(model_name=\"gpt-3.5-turbo-1106\",max_tokens = 100,temperature=0.7,prompt_technique=\"zero_shot\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'zero_shot'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.prompt_technique"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/50 [00:00<?, ?it/s]"
+      "  0%|          | 0/4 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 30%|███       | 15/50 [05:26<12:39, 21.70s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "OpenAI API did not work\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 50/50 [28:06<00:00, 33.72s/it]   \n"
+      "100%|██████████| 4/4 [00:04<00:00,  1.17s/it]\n"
      ]
     }
    ],
    "source": [
-    "output_df_in_context = predict_dataset(model,first_data)"
+    "output_df_in_context = predict_dataset(model,dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweet</th>\n",
+       "      <th>Travel Mode</th>\n",
+       "      <th>Satisfaction</th>\n",
+       "      <th>Reason</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>yeah it always be some old caribbean dude head...</td>\n",
+       "      <td>train</td>\n",
+       "      <td>dissatisfied</td>\n",
+       "      <td>being stared at by an old caribbean dude while...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>i was out of ny for too long taking the train ...</td>\n",
+       "      <td>train</td>\n",
+       "      <td>dissatisfied</td>\n",
+       "      <td>nauseous now</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1000</th>\n",
+       "      <td>second system subway and legalized mushrooms</td>\n",
+       "      <td>subway</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>unclear</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1001</th>\n",
+       "      <td>i am at mta subway bay ridge ave (r) in new yo...</td>\n",
+       "      <td>subway</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  tweet Travel Mode  \\\n",
+       "0     yeah it always be some old caribbean dude head...       train   \n",
+       "1     i was out of ny for too long taking the train ...       train   \n",
+       "1000       second system subway and legalized mushrooms      subway   \n",
+       "1001  i am at mta subway bay ridge ave (r) in new yo...      subway   \n",
+       "\n",
+       "      Satisfaction                                             Reason  \n",
+       "0     dissatisfied  being stared at by an old caribbean dude while...  \n",
+       "1     dissatisfied                                       nauseous now  \n",
+       "1000       neutral                                            unclear  \n",
+       "1001       neutral                                                N/A  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output_df_in_context.head()"
    ]
   },
   {
@@ -1272,7 +1368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
