--- a/self_verification.ipynb
+++ b/self_verification.ipynb
@@ -10,6 +10,7 @@
     "from collections import defaultdict\n",
     "from tqdm import tqdm\n",
     "from data import load,load_for_correction\n",
+    "from ChatGPT import OpenAI_Tweet_Analyzer,predict_dataset,verify_dataset\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -206,14 +207,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ChatGPT.model import OpenAI_Tweet_Analyzer,predict_dataset,verify_dataset\n",
-    "\n",
     "model = OpenAI_Tweet_Analyzer(model_name=\"gpt-3.5-turbo-1106\",max_tokens = 100,temperature=0.7,prompt_technique=\"self_verification\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -227,116 +226,70 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20/20 [00:14<00:00,  1.35it/s]\n"
+      "100%|██████████| 20/20 [00:13<00:00,  1.47it/s]\n"
      ]
     }
    ],
    "source": [
-    "output_dict,output_df = verify_dataset(model,dataset)"
+    "output = verify_dataset(model,dataset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "defaultdict(None,\n",
-       "            {0: {'Travel_mode_verification': True,\n",
-       "              'Satisfaction_verification': False,\n",
-       "              'Reason_verification': True},\n",
-       "             1: {'Travel_mode_verification': True,\n",
-       "              'Satisfaction_verification': True,\n",
-       "              'Reason_verification': True},\n",
-       "             2: {'Travel_mode_verification': True,\n",
-       "              'Satisfaction_verification': True,\n",
-       "              'Reason_verification': True},\n",
-       "             3: {'Travel_mode_verification': True,\n",
-       "              'Satisfaction_verification': True,\n",
-       "              'Reason_verification': False},\n",
-       "             4: {'Travel_mode_verification': True,\n",
-       "              'Satisfaction_verification': True,\n",
-       "              'Reason_verification': True},\n",
-       "             5: {'Travel_mode_verification': True,\n",
-       "              'Satisfaction_verification': True,\n",
-       "              'Reason_verification': True},\n",
-       "             6: {'Travel_mode_verification': True,\n",
-       "              'Satisfaction_verification': True,\n",
-       "              'Reason_verification': True},\n",
-       "             7: {'Travel_mode_verification': False,\n",
-       "              'Satisfaction_verification': True,\n",
-       "              'Reason_verification': True},\n",
-       "             8: {'Travel_mode_verification': False,\n",
-       "              'Satisfaction_verification': True,\n",
-       "              'Reason_verification': True},\n",
-       "             9: {'Travel_mode_verification': False,\n",
-       "              'Satisfaction_verification': True,\n",
-       "              'Reason_verification': True},\n",
-       "             10: {'Travel_mode_verification': False,\n",
-       "              'Satisfaction_verification': True,\n",
-       "              'Reason_verification': True},\n",
-       "             11: {'Travel_mode_verification': True,\n",
-       "              'Satisfaction_verification': False,\n",
-       "              'Reason_verification': False},\n",
-       "             12: {'Travel_mode_verification': True,\n",
-       "              'Satisfaction_verification': True,\n",
-       "              'Reason_verification': True},\n",
-       "             13: {'Travel_mode_verification': True,\n",
-       "              'Satisfaction_verification': True,\n",
-       "              'Reason_verification': True},\n",
-       "             14: {'Travel_mode_verification': True,\n",
-       "              'Satisfaction_verification': False,\n",
-       "              'Reason_verification': True},\n",
-       "             15: {'Travel_mode_verification': True,\n",
-       "              'Satisfaction_verification': False,\n",
-       "              'Reason_verification': False},\n",
-       "             16: {'Travel_mode_verification': True,\n",
-       "              'Satisfaction_verification': True,\n",
-       "              'Reason_verification': True},\n",
-       "             17: {'Travel_mode_verification': True,\n",
-       "              'Satisfaction_verification': True,\n",
-       "              'Reason_verification': True},\n",
-       "             18: {'Travel_mode_verification': False,\n",
-       "              'Satisfaction_verification': True,\n",
-       "              'Reason_verification': True},\n",
-       "             19: {'Travel_mode_verification': True,\n",
-       "              'Satisfaction_verification': True,\n",
-       "              'Reason_verification': True}})"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "output_dict"
+    "def correcter_rate(pred,groundtruth):\n",
+    "    gt = groundtruth[[\"Travel_mode_verification\",\"Satisfaction_verification\"]]\n",
+    "    pred = pred[[\"Travel_mode_verification\",\"Satisfaction_verification\"]]\n",
+    "\n",
+    "    correct_pred = sum(pred[\"Travel_mode_verification\"]==gt[\"Travel_mode_verification\"]) + sum(pred[\"Satisfaction_verification\"]==gt[\"Satisfaction_verification\"])\n",
+    "    total = len(gt) * 2\n",
+    "\n",
+    "    return correct_pred/total"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/20 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 20/20 [00:15<00:00,  1.33it/s]\n"
+      "0.85\n"
      ]
     }
    ],
    "source": [
-    "out = verify_dataset(model,dataset)"
+    "print(correcter_rate(output,correction))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Can only compare identically-labeled (both index and columns) DataFrame objects",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/var/tmp/ipykernel_360389/2720093764.py\u001b[0m in \u001b[0;36m?\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcorrection\u001b[0m\u001b[0;34m==\u001b[0m \u001b[0moutput\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/opt/conda/envs/llm/lib/python3.12/site-packages/pandas/core/ops/common.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self, other)\u001b[0m\n\u001b[1;32m     72\u001b[0m                     \u001b[0;32mreturn\u001b[0m \u001b[0mNotImplemented\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     73\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m         \u001b[0mother\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mitem_from_zerodim\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mother\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 76\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mother\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/opt/conda/envs/llm/lib/python3.12/site-packages/pandas/core/arraylike.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self, other)\u001b[0m\n\u001b[1;32m     38\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0munpack_zerodim_and_defer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"__eq__\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__eq__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mother\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 40\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_cmp_method\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mother\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moperator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meq\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/opt/conda/envs/llm/lib/python3.12/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self, other, op)\u001b[0m\n\u001b[1;32m   7625\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_cmp_method\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mother\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mop\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   7626\u001b[0m         \u001b[0maxis\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mLiteral\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m  \u001b[0;31m# only relevant for Series other case\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   7627\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 7628\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mother\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_align_for_op\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mother\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   7629\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   7630\u001b[0m         \u001b[0;31m# See GH#4537 for discussion of scalar op behavior\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   7631\u001b[0m         \u001b[0mnew_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_dispatch_frame_op\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mother\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mop\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/envs/llm/lib/python3.12/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self, other, axis, flex, level)\u001b[0m\n\u001b[1;32m   7923\u001b[0m                     left, right = left.align(\n\u001b[1;32m   7924\u001b[0m                         \u001b[0mright\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mjoin\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"outer\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlevel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   7925\u001b[0m                     \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   7926\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 7927\u001b[0;31m                     raise ValueError(\n\u001b[0m\u001b[1;32m   7928\u001b[0m                         \u001b[0;34m\"Can only compare identically-labeled (both index and columns) \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   7929\u001b[0m                         \u001b[0;34m\"DataFrame objects\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   7930\u001b[0m                     \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Can only compare identically-labeled (both index and columns) DataFrame objects"
+     ]
+    }
+   ],
+   "source": [
+    "correction== output"
    ]
   },
   {
